--- a/stroom/roles/non_docker_proxy/update_config/tasks/main.yml
+++ b/stroom/roles/non_docker_proxy/update_config/tasks/main.yml
@@ -34,6 +34,7 @@
   when: _stroom_proxy_config_files_and_templates_dir_info.stat.exists 
         and item.state == 'file' 
         and item.path is not match ".*\.j2$"
+        and item.path is not match ".*\.gitkeep$" # Ignore .gitkeep files used to maintain empty dirs
   tags:
     - deploy
     - configure
@@ -54,6 +55,7 @@
   when: _stroom_proxy_config_files_and_templates_dir_info.stat.exists 
         and item.state == 'file' 
         and item.path is match ".*\.j2$"
+        and item.path is not match ".*\.gitkeep$" # Ignore .gitkeep files used to maintain empty dirs
   tags:
     - deploy
     - configure
