Add test_dump_db_migration.yml (WIP)

--- a/stroom/roles/build_stroom_source/tasks/main.yml
+++ b/stroom/roles/build_stroom_source/tasks/main.yml
@@ -123,3 +123,4 @@
     chdir: "{{ source_dir }}"
     # Stop it building if the build dir exists
     creates: "stroom-app/build"
+  register: _build_info
