--- a/stroom/roles/setup/java/defaults/main.yml
+++ b/stroom/roles/setup/java/defaults/main.yml
@@ -4,7 +4,7 @@ java_version: 8
 
 # Temporary location where the archive files are downloaded to.
 # They will not be deleted to save downloding again.
-downloads_dir: "/tmp/stroom_downloads"
+downloads_dir: "/tmp/java_downloads"
 
 # The path where the java distribution will be extracted to
 java_unarchive_dest: "/opt"
