--- a/stroom/test_db_migration.yml
+++ b/stroom/test_db_migration.yml
@@ -1,50 +1,51 @@
 ---
+########### LOCALHOST  ###########
+
+- name: Verify local_config_dir is set up
+  import_playbook: ./verify_local_config_dir_exists.yml
+
+################### SETUP HOST(S) ###################
+
+- name: Setup stroom hosts
+  import_playbook: ./setup_stroom_hosts.yml
+  tags:
+    - setup
+
+################### Install Java ###################
+
 - hosts:
     - all
-  gather_facts: false
+  gather_facts: true # Needed for yum stuff
+  tasks:
+
+    - import_role:
+        name: setup/java
+      vars:
+        java_version: "{{ java_version_from }}"
+
+    - import_role:
+        name: setup/java
+      vars:
+        java_version:  "{{ java_version_to }}"
+
+    #- import_role:
+        #name: stack/open_ports
+
+
+        
+- hosts:
+    - all
+  gather_facts: true # Needed for yum stuff
+  become: true
+  become_user: "{{ stroom_user }}"
   vars:
-    - java_version_from: "{{ stroom_6_java_version }}"
-    - java_version_to: "{{ stroom_7_java_version }}"
-    - migration_dir: "~/migration-{{ stroom_version_from }}-{{ stroom_version_to }}"
-    - stack_name: "stroom_core_test"
-    - stroom_6_java_version: "8"
-    - stroom_7_java_version: "12"
-    - stroom_config_dir: "~/.stroom"
-    - stroom_temp_dir: "/tmp/stroom"
-    - stroom_user: "centos"
-    - stroom_version_from: "v6.0.26"
-    - stroom_version_to: "v7.0-beta.11"
       # Normally we would deploy a stack on top of another but if we do that we
       # can't go back as the config is different
     - stack_dir_from: "{{ migration_dir }}/stack-{{ stroom_version_from }}"
     - stack_dir_to: "{{ migration_dir }}/stack-{{ stroom_version_to }}"
   tasks:
 
-    ################### SETUP HOST ###################
-
-    - import_role:
-        name: setup/common
-
-    - import_role:
-        name: setup/docker
-
-    # The JDKs will be installed as a dep of build_stroom_source
-
-    #- import_role:
-        #name: setup/java
-      #vars:
-        #java_version: "{{ java_version_from }}"
-
-    #- import_role:
-        #name: setup/java
-      #vars:
-        #java_version:  "{{ java_version_to }}"
-
-    - import_role:
-        name: stack/open_ports
-
     ################### TEAR DOWN ###################
-
 
       # Remove the from stack dir
     - name: Ensure '{{ stack_dir_from }}' is absent
@@ -100,7 +101,7 @@
     ################### SET UP & RUN FROM VERSION ###################
 
     - import_role:
-        name: stack/download
+        name: stack/deploy
       vars:
         stack_version: "{{ stroom_version_from }}"
         stack_install_root_dir: "{{ stack_dir_from }}"
@@ -147,7 +148,7 @@
     ################### SET UP & RUN TO VERSION ###################
 
     - import_role:
-        name: stack/download
+        name: stack/deploy
       vars:
         stack_version: "{{ stroom_version_to }}"
         stack_install_root_dir: "{{ stack_dir_to }}"
@@ -168,12 +169,21 @@
         stack_version: "{{ stroom_version_to }}"
         state: "started"
 
-      # Download, build and run the from stroom release
+      # Download, build and run the db migration from stroom release
     - import_role:
         name: build_stroom_source
       vars:
         repo_name: "stroom"
         release_version: "{{ stroom_version_to }}"
         java_version:  "{{ java_version_to }}"
-        gradle_args: "build -x test -x gwtCompile run"
+        gradle_args: "build -x test -x gwtCompile migrate"
         unpack_dir: "{{ migration_dir }}"
+
+      # It is nice to see the output of the migration
+    - name: Migration stdout
+      debug:
+        msg: "{{ _build_info.stdout_lines }}"
+
+    - name: Migration stderr
+      debug:
+        msg: "{{ _build_info.stderr_lines }}"
