--- a/stroom/roles/setup/docker/defaults/main.yml
+++ b/stroom/roles/setup/docker/defaults/main.yml
@@ -1,5 +1,12 @@
 ---
 # The user that will be added to the docker group so they can run docker without sudo
 docker_user: "centos"
-docker_compose_version: "1.24.1"
 
+docker_yum_repo_file_url: https://download.docker.com/linux/centos/docker-ce.repo
+docker_yum_repo_file_path: /etc/yum.repos.d/docker-ce.repo
+
+# This is the base url for the yum repo
+docker_yum_repo_base_url: https://download.docker.com/linux/centos/7/$basearch/stable
+
+docker_compose_version: "1.24.1"
+docker_compose_url:  "https://github.com/docker/compose/releases/download/{{ docker_compose_version }}/docker-compose-Linux-x86_64"
