--- a/stroom/roles/stack/download/tasks/main.yml
+++ b/stroom/roles/stack/download/tasks/main.yml
@@ -59,7 +59,7 @@
 
       # FIXME: I can't get the unarchive module to work on macOS or Ubuntu. Ansible complains about /bin/tar not being able
       # to handle the archive. It untars manually without problems, so I'l just do that.
-    - name: "Unpack Stroom's distribution tar into {{ _stack_unpack_tmp_dir_info.path }}"
+    - name: "Unpack stack distribution tar into {{ _stack_unpack_tmp_dir_info.path }}"
       command: >-
         tar
         -xv
